@@ -37,7 +37,9 @@ public:
     int bitrateMin, bitrateMax;     // set to 0 to disable, only used when qualityMode==Bitrate and BitrateMode!=Cbr
     int samplingRate;               // in Hz, set to 0 to disable
     int channels;                   // number of channels, set to 0 to disable
-    
+
+    QString cmdArguments;           // user defined command line arguments
+
     // plugin specific, may not be used by alternative plugins
     double compressionLevel;        // how hard should the encoder try
 
