@@ -11,6 +11,7 @@ class QSpinBox;
 class QCheckBox;
 class QLabel;
 class QSlider;
+class KLineEdit;
 
 class LameCodecWidget : public CodecWidget
 {
@@ -45,6 +46,8 @@ private:
     KComboBox *cChannels;
     QCheckBox *chSamplerate;
     KComboBox *cSamplerate;
+    QCheckBox *cCmdArguments;
+    KLineEdit *lCmdArguments;
 
     QString currentFormat; // holds the current output file format
 
@@ -59,8 +62,6 @@ private slots:
     void modeChanged( int mode );
     void qualitySliderChanged( int quality );
     void qualitySpinBoxChanged( int quality );
-    void channelsToggled( bool enabled );
-    void samplerateToggled( bool enabled );
 
 signals:
     void somethingChanged();
