@@ -3,6 +3,7 @@
 -Fix: soundKonverter would get stuck when trying to add replaygain (add argument for mp3gain/aacgain to lower gain to avoid clipping)
 -Fix: soundkonverter would crash when trying to rip a cd or add files if the options widget can't be initialized correctly
 -Fix: The options widget wasn't initialized correctly causing some crashes
+-Add: User defined command line arguments for lame
 
 0.9.91 (1.0.0 beta2):
 -Add: flac and metaflac plugins
